# cpp_training

./: .gitignore  .gitmodules  CMakeLists.txt  DiscreteTimeModel  Makefile  README.md  compartment.json  main.cpp
.github/workflows/: c-cpp.yml
Rcode/: .Rhistory  checkCpp.R  readJSON.R
SEAIHCR/: BernoulliDistribution.cpp  BernoulliDistribution.h  CMakeLists.txt  Compartment.cpp  Compartment.h  DiscreteGammaDistribution.cpp  DiscreteGammaDistribution.h  DiscreteWeibullDistribution.cpp  DiscreteWeibullDistribution.h  Distribution.cpp  Distribution.h  File.h  FileCSV.cpp  FileCSV.h  FileJSON.h  Model.cpp  Model.h  main.cpp  prob.cpp
config/: HCM.csv  HN.csv  SIR.json  SIR_5gamma_1000.json  SIR_age_location.json  SIR_custom.json  SIR_exponential_1000.json  SIR_gamma.json  SIR_gamma_1000.json  SIR_gender_age_location.json  SIR_gender_age_locations.json  SIR_general.json  SIR_location.json  SIR_threeFullModels.json  SIR_threeModels.json  SIR_twoModels.json  config.json  config_SIR.json  config_SIR_100.json  config_SIR_euler.json  fullModel.json  fullModel_newConfig.json  testFOIDistr.json  vaccination.json  vaccination_example.json
config/archive/: SIR_age_location.json  SIR_gamma_1000.json  SIR_gender_age_location.json  SIR_general_3groups.json  SIR_twoModels.json
docs/: discreteTimeVsDiffEquation.md  manual.md  notes.docx
makefile-inc/: Makefile-help.mk  Makefile-impl.mk  Makefile-variables.mk  Makefile.mk  Project-preprocessors.mk  Project-variables.mk  notes.txt
oopSIR_1/: CMakeLists.txt  Compartment.cpp  Compartment.h  Model.cpp  Model.h  main.cpp
plots/: test_1.txt
rcode/: .Rhistory  checkCpp.R  check_2locations.R  check_3locations.R  deSolve_gammaDist.Rmd  difSIR_model.Rmd  metaProgramming.R
rcode/deSolve/: .Rhistory  deSolve_SIR.R  deSolve_age_location.R  deSolve_age_location_metaProgramming.R  deSolve_gammaDist.R  deSolve_gender_age_location.R  deSolve_location.R  deSolve_timeBenchmark.R  metaProgramming_deSolve_gender_age_location.R
rcode/snippets/: sir_equations_maker.R
src/: BernoulliDistribution.cpp  BernoulliDistribution.h  CMakeLists.txt  Compartment.cpp  Compartment.h  CompartmentJSON.cpp  CompartmentJSON.h  Contact.cpp  Contact.h  DiscreteGammaDistribution.cpp  DiscreteGammaDistribution.h  DiscreteWeibullDistribution.cpp  DiscreteWeibullDistribution.h  Distribution.h  DistributionConstant.cpp  DistributionConstant.h  DistributionDiscreteExponential.cpp  DistributionDiscreteExponential.h  DistributionDiscreteGamma.cpp  DistributionDiscreteGamma.h  DistributionDiscreteWeibull.cpp  DistributionDiscreteWeibull.h  DistributionFrequency.cpp  DistributionFrequency.h  DistributionLogNormal.cpp  DistributionLogNormal.h  DistributionTransitionProb.cpp  DistributionTransitionProb.h  DistributionValues.cpp  DistributionValues.h  File.h  FileCSV.cpp  FileJSON.cpp  FullModel.cpp  FullModel.h  Matrix.cpp  Matrix.h  Model.cpp  Model.h  ModelJSON.cpp  (+9 more)
src/Distribution/: BernoulliDistribution.cpp  BernoulliDistribution.h  CustomDistribution.cpp  CustomDistribution.h  DiscreteExponentialDistribution.cpp  DiscreteExponentialDistribution.h  DiscreteGammaDistribution.cpp  DiscreteGammaDistribution.h  DiscreteWeibullDistribution.cpp  DiscreteWeibullDistribution.h  Distribution.cpp  Distribution.h  MathExpression.h  myProb.h
src/tests/: CMakeLists.txt  ModelTest.cpp  Test1.cpp
test/: CMakeLists.txt  ModelTest.cpp  main.cpp
test/lib/docs/: advanced.md  gmock_cheat_sheet.md  primer.md
test/lib/googlemock/: CMakeLists.txt
test/lib/googlemock/scripts/: fuse_gmock_files.py
test/lib/googlemock/src/: gmock-spec-builders.cc  gmock.cc
test/lib/googlemock/test/: gmock-actions_test.cc  gmock-cardinalities_test.cc  gmock-function-mocker_test.cc  gmock-internal-utils_test.cc  gmock-matchers_test.cc  gmock-more-actions_test.cc  gmock-nice-strict_test.cc  gmock-port_test.cc  gmock-pp-string_test.cc  gmock-spec-builders_test.cc  gmock_all_test.cc  gmock_link_test.h  gmock_output_test.py  gmock_output_test_.cc  gmock_test.cc
test/lib/googletest/: CMakeLists.txt
test/lib/googletest/cmake/: internal_utils.cmake
test/lib/googletest/samples/: prime_tables.h  sample10_unittest.cc  sample1_unittest.cc  sample2_unittest.cc  sample3_unittest.cc  sample5_unittest.cc  sample6_unittest.cc  sample7_unittest.cc  sample8_unittest.cc  sample9_unittest.cc
test/lib/googletest/scripts/: fuse_gtest_files.py  gen_gtest_pred_impl.py
test/lib/googletest/src/: gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest.cc
test/lib/googletest/test/: googletest-break-on-failure-unittest.py  googletest-catch-exceptions-test.py  googletest-death-test-test.cc  googletest-death-test_ex_test.cc  googletest-failfast-unittest.py  googletest-filepath-test.cc  googletest-filter-unittest.py  googletest-filter-unittest_.cc  googletest-global-environment-unittest.py  googletest-json-outfiles-test.py  googletest-json-output-unittest.py  googletest-list-tests-unittest.py  googletest-list-tests-unittest_.cc  googletest-listener-test.cc  googletest-options-test.cc  googletest-output-test.py  googletest-output-test_.cc  googletest-param-test-test.cc  googletest-port-test.cc  googletest-printers-test.cc  googletest-shuffle-test.py  googletest-throw-on-failure-test.py  googletest-throw-on-failure-test_.cc  gtest-typed-test_test.cc  gtest-unittest-api_test.cc  gtest_assert_by_exception_test.cc  gtest_environment_test.cc  gtest_help_test.py  gtest_help_test_.cc  gtest_list_output_unittest.py  (+13 more)
tests/: CMakeLists.txt  DiscreteGammaDistributionTest.cpp  ModelTest.cpp
(+15 files in other folders)
